--- a/fb-ng-synch-template/src/app/note-list/note-list.component.html
+++ b/fb-ng-synch-template/src/app/note-list/note-list.component.html
@@ -134,8 +134,8 @@
     </div>
     <div>
         
-        @for (note of noteList; track note) {
-            <app-note [note]="note"></app-note>
-          }
+
+            <app-note *ngFor="let note of getNormaNotesList()" [note]="note"></app-note>
+        
     </div>
 </div>
